<resources>
    <string name="app_name">sai</string>
    <string name="home_fragment">home_fragment</string>
    <string name="home">홈</string>
    <string name="fragment_myPage">마이페이지</string>
    <string name="fragment_record">기록</string>
    <string name="app_settings_fragment">앱설정</string>
    <string name="followers_fragment">팔로워</string>
    <string name="login_management_fragment">로그인 관리</string>
    <string name="settings_fragment">설정</string>
    <string name="main_head_title">안녕하세요\n김철수님👋🏻</string>
    <string name="main_head_second_title">금주의 새로운 쪽지</string>
    <string name="main_head_third_title">사람들이 방금 찾은 쪽지</string>
    <string name="text_more">더보기 ></string>
    <string name="text_review">리뷰남기기</string>
    <string name="settings_btn">설정 버튼</string>
    <string name="profile_image">프로필 사진</string>
    <string name="nickname_text">닉네임</string>
    <string name="message">쪽지</string>
    <string name="follow">팔로우</string>
    <string name="follower">팔로워</string>
    <string name="randomNumber">123456</string>
    <string name="hintExchangePlaceHolder">힌트 교환권</string>
    <string name="availableHints">사용 가능한 힌트</string>
    <string name="X_availableHintsPlaceHolder">X 0</string>
    <string name="placeholder_text">placeholder_text</string>
    <string name="receivedReviews">받은 리뷰</string>
    <string name="review_placeholder_text">쪽지 내용이 너무 감동적이에요…ㅠ</string>
    <string name="privacy_management">개인정보 관리</string>
    <string name="app_settings"> > 앱 설정</string>
    <string name="log_out">로그아웃</string>
    <string name="follow_management">팔로우 관리</string>
    <string name="login_management">로그인 관리</string>
    <string name="login_company">네이버</string>
    <string name="sign_in_date">2024년 12월 11일 가입</string>
    <string name="follower_nickname">팔로워 닉네임</string>
    <string name="alertTitle">알림</string>
    <string name="alert_item_1">새로운 쪽지가 등록됐을 때</string>
    <string name="alert_item_2">다른 사람이 내 쪽지를 발견했을 때</string>
    <string name="alert_item_3">내 쪽지가 좋아요를 받았을 때</string>
    <string name="alert_item_4">팔로우 요청을 받았을 때</string>
    <string name="alert_item_5">프로모션 / 이벤트 알림 수신</string>
    <string name="dots">............................................................................................</string>
    <string name="delete_cash_data">캐시 데이터 삭제</string>
    <string name="my_registered_notes">내가 등록한 쪽지</string>
    <string name="completed_finds">내가 찾은 쪽지</string>
    <string name="bookmarkednotes">내가 찜한 쪽지</string>
    <string name="app_setting">앱 설정</string>
    <string name="randomDescription">나중에 바꿀 거</string>
    <string name="save">저장</string>
    <string name="selected_image">선택된 이미지</string>
    <string name="reviewToOwner">쪽지 주인에게 리뷰하기</string>
    <string name="received_reviews_title">받은 리뷰</string>
    <string name="received_reviews_fragment">내가 받은 리뷰</string>
    <string name="registered_note">등록한 쪽지</string>
    <string name="found_complete_note">찾은 쪽지</string>
    <string name="saved_note">찜한 쪽지</string>
    <string name="more">더 보기</string>
    <string name="unfollow">팔로우 취소</string>
    <string name="disable_connection">연동 해제</string>
    <string name="enable_connection">연동 중</string>
    <string name="leaveHints">힌트 남기기</string>
    <string name="toHome">홈으로</string>
    <string name="leaveReview">리뷰 남기기</string>
    <string name="goFindNotes">쪽지 찾으러 가기</string>
    <string name="goHideNotes">쪽지 숨기기</string>
    <string name="pleaseMakeReview">쪽지를 숨긴 사람에게 리뷰를 남겨주세요</string>
    <string name="no">아니요</string>
    <string name="yes">네</string>
    <string name="dialog_unfollow_title">팔로우를 취소하시겠습니까?</string>

    <!-- 버튼 텍스트-->
    <string name="sort_recent">최신순</string>
    <string name="sort_saved_up">찜 높은순</string>
    <string name="sort_saved_down">찜 낮은순</string>
    <string name="register">등록</string>
    <string name="confirm">확인</string>
    <string name="goToHome">홈으로</string>
    <string name="write_hints">힌트남기기</string>
    <string name="scanBarcode">책바코드스캔</string>
    <string name="scanBarcode_again">다시스캔하기</string>
    <string name="goFindNote">쪽지 찾기</string>
    <string name="write_review">리뷰남기기</string>
    <string name="sort_heart_up">하트높은순</string>
    <string name="sort_heart_down">하트낮은순</string>


    <!-- 네비게이션 라벨-->
    <string name="my_registered_notes_fragment">my_registered_notes_fragment</string>
    <string name="weeklyNotes_fragment">weeklyNotes_fragment</string>
    <string name="weeklyNotes_detail_fragment">weeklyNotes_detail_fragment</string>
    <string name="fragment_library_map">fragment_library_map</string>
    <string name="completed_finds_fragment">completed_finds_fragment</string>
    <string name="fragment_bookmarkedNotes">fragment_bookmarkedNotes</string>
    <string name="privacy_management_fragment">privacy_management_fragment</string>
    <string name="recently_Found_notes_fragment">recently_Found_notes_fragment</string>
    <string name="mainfragment">MainFragment</string>
    <string name="register_confirmation_fragment">register_confirmation_fragment</string>
    <string name="register_detail_fragment">register_detail_fragment</string>
    <string name="recently_found_notes_fragment_detail">recently_found_notes_fragment_detail</string>
    <string name="weeklyNotes">weeklyNotes_detail_fragment</string>

    <!-- toolbar titles -->
    <string name="RECENTLY_FOUND_NOTES_TOOLBAR_TITLE">방금 찾은 쪽지</string>
    <string name="WEEKLY_NOTES_TOOLBAR_TITLE">금주의 새로운 쪽지</string>
    <string name="SEARCH_NOTES_TOOLBAR_TITLE">쪽지 찾기</string>
    <string name="GO_HOME_TOOLBAR_TITLE">홈</string>
    <string name="BACK_TOOLBAR_TITLE">이전으로</string>
    <string name="APP_SETTING_TOOLBAR_TITLE">앱설정</string>
    <string name="RECEIVED_REVIEW_TOOLBAR_TITLE">받은 리뷰</string>
    <string name="PRIVACY_MANAGEMENT_TOOLBAR_TITLE">개인정보관리</string>
    <string name="FOLLOWER_TOOLBAR_TITLE">팔로워</string>
    <string name="LOGIN_MANAGEMENT_TOOLBAR_TITLE">로그인 관리</string>
    <string name="SETTING_MANAGEMENT_TOOLBAR_TITLE">설정</string>
    <string name="MY_REGISTERED_NOTES_TOOLBAR_TITLE">내가 등록한 쪽지</string>
    <string name="COMPLETED_FINDS_TOOLBAR_TITLE">내가 찾은 쪽지</string>
    <string name="BOOKMARKED_NOTES_TOOLBAR_TITLE">내가 찜한 쪽지</string>
    <string name="WRITE_REVIEW_TOOLBAR_TITLE">리뷰 작성</string>

    <!-- dialog button text -->
    <string name="DIALOG_BUTTON_TEXT_YES">네</string>
    <string name="DIALOG_BUTTON_TEXT_NO">아니오</string>

    <!-- dialog titles, messages -->
    <string name="DIALOG_TITLE_DELETE_CASH">캐시 데이터 삭제</string>
    <string name="DIALOG_MESSAGE_DELETE_CASH">캐시 데이터를 삭제하시겠습니까?</string>

    <!-- toast message -->
    <string name="TOAST_MESSAGE_CASH_DELETED">캐시 데이터가 삭제되었습니다.</string>

    <!-- button tags -->
    <string name="BUTTON_TAG_DEACTIVATE">deactivate</string>
    <string name="BUTTON_TAG_ACTIVATE">activate</string>


    <string name="login_required">로그인이 필요합니다</string>
    <string name="welcome_message">안녕하세요 %s 님</string>
    <string name="library_map">등록/보기</string>
    <string name="record">기록</string>
    <string name="myPage">마이페이지</string>
    <string name="takePicture">사진찍기</string>
    <string name="write_nickname">닉네임을 입력해주세요</string>
    <string name="splash_chaksai">CHAKSAI</string>
    <string name="re_scan_barcode">인식이 잘못 되었거나\n정답이 아닙니다.\n다시 인식해주세요.</string>
    <string name="register_note_title">도서관에서 있었던 일들을\n자유롭게 남겨주세요</string>
    <string name="bottom_item_book">책</string>
    <string name="bottom_item_chatting">chatting</string>

</resources>