<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/fragmentHome"
            android:title="@string/home"
            android:icon="@drawable/icon_home" />
        <item
            android:id="@+id/fragmentLibraryMapFragment"
            android:title="@string/library_map"
            android:icon="@drawable/icon_search"
            />
        <item
            android:id="@+id/fragment_record"
            android:title="@string/record"
            android:icon="@drawable/icon_record"
            />

        <item
            android:id="@+id/fragment_myPage"
            android:title="@string/myPage"
            android:icon="@drawable/icon_setting"
            />

    </group>
</menu>