<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/neutral"
    android:padding="@dimen/guideline_padding">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment_record_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dunggeunmo"
        android:text="@string/fragment_record"
        android:textAppearance="?attr/textAppearanceHeadline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/button_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/fragment_record_TV">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_registered_notes"
            style="@style/SmallButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/registered_note" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_completed_finds"
            style="@style/SmallButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/found_complete_note" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_bookmarked_notes"
            style="@style/SmallButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/saved_note" />


    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_group" />

</androidx.constraintlayout.widget.ConstraintLayout>
