<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintBottom_toTopOf="@+id/button_group"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/icon_back" />

    <LinearLayout
        android:id="@+id/button_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_recent"
            style="@style/SmallButtonStyle"
            android:layout_marginEnd="34dp"
            android:text="@string/sort_recent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_heart_up"
            style="@style/SmallButtonStyle"
            android:layout_marginEnd="34dp"
            android:text="@string/sort_heart_up" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_heart_down"
            style="@style/SmallButtonStyle"
            android:text="@string/sort_heart_down" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_grid_notes_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        app:flow_horizontalGap="24dp"
        app:flow_verticalGap="24dp"
        app:layout_constraintTop_toBottomOf="@+id/button_group" />

</androidx.constraintlayout.widget.ConstraintLayout>