<?xml version="1.0" encoding="utf-8"?><!--writer: 정지영-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/neutral"
    android:padding="@dimen/guideline_padding"
    tools:context=".ui.myPage.AppSettingsFragment">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarTitleStyle"
        app:title="@string/app_settings_fragment"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@android:color/black" />
    </androidx.appcompat.widget.Toolbar>

    <!-- 앱 설정 제목 -->

    <!-- 알림 제목 -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/alertTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dunggeunmo"
        android:text="@string/alertTitle"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <!-- 알림 항목 리스트 -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/alert_item_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin_top"
        android:fontFamily="@font/dunggeunmo"
        android:text="@string/alert_item_1"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintStart_toStartOf="@+id/alertTitle"
        app:layout_constraintTop_toBottomOf="@+id/alertTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dots_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/dots"
        app:layout_constraintEnd_toStartOf="@+id/button_1"
        app:layout_constraintStart_toEndOf="@+id/alert_item_1"
        app:layout_constraintTop_toTopOf="@+id/alert_item_1" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/button_1"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/neutral"
        android:contentDescription="@string/randomDescription"
        android:src="@drawable/deactivate"
        android:tag="deactivate"
        app:layout_constraintBottom_toBottomOf="@+id/alert_item_1"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/alert_item_2"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin_top"
        android:fontFamily="@font/dunggeunmo"
        android:text="@string/alert_item_2"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintStart_toStartOf="@+id/alert_item_1"
        app:layout_constraintTop_toBottomOf="@+id/alert_item_1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dots_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/dots"
        app:layout_constraintEnd_toStartOf="@+id/button_2"
        app:layout_constraintStart_toEndOf="@+id/alert_item_2"
        app:layout_constraintTop_toTopOf="@+id/alert_item_2" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/button_2"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/neutral"
        android:contentDescription="@string/randomDescription"
        android:src="@drawable/activate"
        android:tag="activate"
        app:layout_constraintBottom_toBottomOf="@+id/alert_item_2"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/alert_item_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin_top"
        android:fontFamily="@font/dunggeunmo"
        android:text="@string/alert_item_3"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintStart_toStartOf="@+id/alert_item_2"
        app:layout_constraintTop_toBottomOf="@+id/alert_item_2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dots_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/dots"
        app:layout_constraintEnd_toStartOf="@+id/button_3"
        app:layout_constraintStart_toEndOf="@+id/alert_item_3"
        app:layout_constraintTop_toTopOf="@+id/alert_item_3" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/button_3"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/neutral"
        android:contentDescription="@string/randomDescription"
        android:src="@drawable/activate"
        android:tag="activate"
        app:layout_constraintBottom_toBottomOf="@+id/alert_item_3"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/alert_item_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin_top"
        android:fontFamily="@font/dunggeunmo"
        android:text="@string/alert_item_4"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintStart_toStartOf="@+id/alert_item_3"
        app:layout_constraintTop_toBottomOf="@+id/alert_item_3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dots_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/dots"
        app:layout_constraintEnd_toStartOf="@+id/button_4"
        app:layout_constraintStart_toEndOf="@+id/alert_item_4"
        app:layout_constraintTop_toTopOf="@+id/alert_item_4" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/button_4"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/neutral"
        android:contentDescription="@string/randomDescription"
        android:src="@drawable/activate"
        android:tag="activate"
        app:layout_constraintBottom_toBottomOf="@+id/alert_item_4"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/alert_item_5"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin_top"
        android:fontFamily="@font/dunggeunmo"
        android:text="@string/alert_item_5"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintStart_toStartOf="@+id/alert_item_4"
        app:layout_constraintTop_toBottomOf="@+id/alert_item_4" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dots_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/dots"
        app:layout_constraintEnd_toStartOf="@+id/button_5"
        app:layout_constraintStart_toEndOf="@+id/alert_item_5"
        app:layout_constraintTop_toTopOf="@+id/alert_item_5" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/button_5"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/neutral"
        android:contentDescription="@string/randomDescription"
        android:src="@drawable/deactivate"
        android:tag="deactivate"
        app:layout_constraintBottom_toBottomOf="@+id/alert_item_5"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/delete_cash_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/guideline_padding"
        android:backgroundTint="@color/primary"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/cardCornerRadius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alert_item_5"
        app:strokeColor="@color/black"
        app:strokeWidth="@dimen/cardviewStrokeWidth">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dunggeunmo"
                android:gravity="center"
                android:padding="@dimen/guideline_padding"
                android:text="@string/delete_cash_data"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceBody1" />
        </FrameLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
