<?xml version="1.0" encoding="utf-8"?><!--writer: 정지영-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/neutral"
    android:padding="@dimen/guideline_padding"
    tools:context=".ui.myPage.SettingsFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/included_toolbar"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/settings_to_privacy_management_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/cardCornerRadius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:strokeColor="@color/black"
        app:strokeWidth="@dimen/cardviewStrokeWidth">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dunggeunmo"
                android:gravity="center"
                android:padding="@dimen/guideline_padding"
                android:text="@string/privacy_management"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceBody1" />
        </FrameLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/settings_to_app_settings_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/guideline_padding"
        android:backgroundTint="@color/primary"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/cardCornerRadius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_to_privacy_management_btn"
        app:strokeColor="@color/black"
        app:strokeWidth="@dimen/cardviewStrokeWidth">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dunggeunmo"
                android:gravity="center"
                android:padding="@dimen/guideline_padding"
                android:text="@string/app_setting"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceBody1" />
        </FrameLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/settings_to_log_out_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/guideline_padding"
        android:backgroundTint="@color/primary"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/cardCornerRadius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_to_app_settings_btn"
        app:strokeColor="@color/black"
        app:strokeWidth="@dimen/cardviewStrokeWidth">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dunggeunmo"
                android:gravity="center"
                android:padding="@dimen/guideline_padding"
                android:text="@string/log_out"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceBody1" />
        </FrameLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>